Fixed spacing between bottom of Navbar and top of attractions index by adding padding to attractions index. Added new div to attractions/mapping with display flex property

--- a/frontend/src/styles/components/attraction_index_old.scss
+++ b/frontend/src/styles/components/attraction_index_old.scss
@@ -1,14 +1,5 @@
-.attractions-map-section {
-  padding-top: 30px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-
-
-
-.attractionsListings { 
+.attractionsListings {
+  left: 20px;  
   margin-top: 175px;
   display: flex;
   position: relative;
